--- a/pages/index.html
+++ b/pages/index.html
@@ -151,7 +151,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <a href="#" class="links-tabs__item wow fadeInUp" data-wow-delay="0.3s">
+                        <a href="./equipe.html" class="links-tabs__item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="img">
                                 <img src="../images/bg/escritorio-5.jpg" alt="">
                             </div>
@@ -162,7 +162,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4">
-                        <a href="#" class="links-tabs__item wow fadeInUp" data-wow-delay="0.4s">
+                        <a href="./escritorio.html" class="links-tabs__item wow fadeInUp" data-wow-delay="0.4s">
                             <div class="img">
                                 <img src="../images/bg/escritorio-6.jpg" alt="">
                             </div>
@@ -173,7 +173,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4">
-                        <a href="#" class="links-tabs__item wow fadeInUp" data-wow-delay="0.5s">
+                        <a href="./areasatuacao.html" class="links-tabs__item wow fadeInUp" data-wow-delay="0.5s">
                             <div class="img">
                                 <img src="../images/bg/biblioteca.jpg" alt="">
                             </div>
