--- a/pages/noticia.html
+++ b/pages/noticia.html
@@ -128,97 +128,80 @@
                 </div>
             </div>
         </section>
-        <section id="imprensa" class="imprensa">
+        <section id="interna-content" class="interna-content">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 px-lg-1">
-                        <a href="#" class="imprensa__lg wow fadeIn" data-wow-delay="0.2s">
-                            <div class="img">
-                                <img src="../images/bg/pilares-3.jpg" alt="">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">Nome da matéria</h3>
-                                <p class="about">Nome do véiculo • 09.10.2020</p>
-                            </div>
-                        </a href="#">
-                    </div>
-                    <div class="col-lg-6 px-lg-0">
-                        <a href="#" class="imprensa__sm wow fadeIn" data-wow-delay="0.3s">
-                            <div class="img">
-                                <img src="../images/bg/officer.png" alt="">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">Título da matéria pode
-                                    ter duas linhas</h3>
-                                <p class="about">Nome do véiculo • 09.10.2020</p>
-                            </div>
-                        </a>
-                        <a href="#" class="imprensa__sm wow fadeIn" data-wow-delay="0.4s">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-3.jpg" alt="">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">Título da matéria pode
-                                    ter duas linhas</h3>
-                                <p class="about">Nome do véiculo • 09.10.2020</p>
-                            </div>
-                        </a>
-                        <a href="#" class="imprensa__sm wow fadeIn" data-wow-delay="0.5s">
-                            <div class="img">
-                                <img src="../images/bg/cidade-2.jpg" alt="">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">Título da matéria pode
-                                    ter duas linhas</h3>
-                                <p class="about">Nome do véiculo • 09.10.2020</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6 px-lg-1">
-                        <a href="#" class="imprensa__sm wow fadeIn" data-wow-delay="0.3s">
-                            <div class="img">
-                                <img src="../images/bg/pilares-2.jpg" alt="">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">Título da matéria pode
-                                    ter duas linhas</h3>
-                                <p class="about">Nome do véiculo • 09.10.2020</p>
-                            </div>
-                        </a>
-                        <a href="#" class="imprensa__sm wow fadeIn" data-wow-delay="0.4s">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-2.jpg" alt="">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">Título da matéria pode
-                                    ter duas linhas</h3>
-                                <p class="about">Nome do véiculo • 09.10.2020</p>
-                            </div>
-                        </a>
-                        <a href="#" class="imprensa__sm wow fadeIn" data-wow-delay="0.5s">
-                            <div class="img">
-                                <img src="../images/bg/quadro-red.png" alt="">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">Título da matéria pode
-                                    ter duas linhas</h3>
-                                <p class="about">Nome do véiculo • 09.10.2020</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 px-lg-0">
-                        <a href="#" class="imprensa__lg wow fadeIn" data-wow-delay="0.6s">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-6.jpg" alt="">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">Nome da matéria</h3>
-                                <p class="about">Nome do véiculo • 09.10.2020</p>
-                            </div>
-                        </a href="#">
-                    </div>
+                <img class="wow zoomIn" src="../images/bg/pilares-3.jpg" alt="">
+                <div class="interna-content__markup wow fadeIn" data-wow-delay="0.4s">
+                    <h1>
+                        Título da matéria
+                    </h1>
+                    <h3>
+                        Nome do véiculo • 09.10.2020
+                    </h3>
+                    <p>Quando há trinta anos começamos a advogar na área criminal, o direito penal
+                        passava por um período de transição. O direito penal clássico, baseado na
+                        proteção de bens jurídicos individuais, como a liberdade, a vida e o patrimônio,
+                        passava a conviver com o direito penal econômico.</p>
+                    <p>Tradicionalmente, a advocacia criminal clássica cuidava de pessoas físicas,
+                        vítimas ou acusadas da prática de infrações penais contra outras pessoas. Em
+                        razão dessa característica, a advocacia criminal, ao contrário da advocacia
+                        cível e comercial, sempre foi artesanal, implementada por pequenos escritórios,
+                        em que poucos advogados cuidavam diretamente das causas que lhes eram confiadas
+                        por seus clientes.</p>
+                    <p>No fim da década de 80, no entanto, o direito penal expande-se para outras
+                        searas. São criadas leis que visam a proteger bens jurídicos coletivos e
+                        difusos. O direito penal passa a se ocupar não apenas de lesões a interesses
+                        individuais, mas também daqueles danos a interesses coletivos, como o meio
+                        ambiente, o sistema financeiro e a livre concorrência.</p>
+                    <p>Com isso, nasce o direito penal econômico. Condutas criminosas são atribuídas
+                        a gestores e a empregados de grandes corporações. Empresas são também
+                        investigadas e seus diretores muitas vezes acusados do cometimento de crimes.</p>
+                    <p>É nesse contexto que a nossa advocacia se desenvolveu. Vivenciamos o direito
+                        penal clássico e acompanhamos o nascimento e desenvolvimento do direito penal
+                        econômico, atuando em muitas das principais causas que envolveram crimes
+                        econômicos no Brasil.</p>
+                    <p>Todavia, nos últimos anos, a realidade das investigações penais sobre crimes
+                        econômicos mudou radicalmente, especialmente em razão dos processos relacionados
+                        à Operação Lava Jato. Até então, raramente havia decretação de medidas
+                        cautelares invasivas nos processos que tratavam de crimes econômicos.</p>
+                    <p>
+                        A partir dessa e de outras operações que se sucederam, passou a ser comum a
+                        imposição de prisões cautelares, buscas e apreensões e quebras de sigilo,
+                        oferecendo riscos de curto prazo aos indivíduos e corporações que, uma vez
+                        concretizados, causam danos de difícil reparação.
+                    </p>
+                    <p>
+                        Além disso, com o endurecimento do sistema penal, tornou-se comum o uso de
+                        instrumentos de colaboração e acordos de leniência com efeitos penais, embora
+                        ainda vigore ampla insegurança jurídica quanto aos dois institutos.
+                    </p>
+                    <p>
+                        Ainda no âmbito das transformações na advocacia criminal, as autoridades de
+                        persecução penal se estruturaram e hoje contam com arsenal tecnológico para
+                        exame de megadata, o que tornou ainda mais desafiadora a atuação do advogado
+                        criminalista nos tempos atuais.</p>
+                    <p>
+                        Isso porque passa a ser necessário contar também com estrutura tecnológica capaz
+                        de conferir eficácia concreta à garantia de paridade de armas e assegurar uma
+                        mudança na forma de atuação profissional, tornando-se muito importante a
+                        preparação da estratégia para enfrentamento dos casos, com estratégias de curto
+                        prazo (enfrentamento de medidas cautelares) e de longo prazo. O direito penal
+                        clássico forjou o advogado criminalista clássico.</p>
+                    <p>
+                        O advogado agora tem que se adaptar à nova realidade, sem perder a essência da
+                        advocacia criminal, que é a luta pela proteção dos direitos individuais.
+                    </p>
+                    <p>
+                        O desafio da advocacia criminal moderna é conseguir compreender as demandas e o
+                        funcionamento das corporações, sem perder o caráter artesanal da defesa.</p>
+                    <p>
+                        É conhecer a empresa e as suas necessidades, as ferramentas tecnológicas da
+                        acusação e da defesa, sem esquecer que o processo sempre recairá sobre um ser
+                        humano.
+                    </p>
+                    <p>
+                        É ser técnico, sem ser autômato. Esse é o desafio que propomos realizar.</p>
+                    <hr>
                 </div>
             </div>
         </section>
