--- a/pages/noticia.html
+++ b/pages/noticia.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <!-- partial:../partials/__head.html -->
+        
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Paulo Freitas Ribeiro • Advogados associados</title>
         <link rel="icon" href="/images/ico/favicon.png"/>
+
         <!-- Load META-TAGS for SEO -->
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="keywords" content=""/>
@@ -23,6 +25,7 @@
         <meta
             name="description"
             content="Mais do que uma gestura, um hub de empreendedorismo."/>
+
         <!-- Load META-TAGS for SOCIAL MEDIAS -->
         <meta property="og:title" content="SK Tarpon">
         <meta
@@ -36,14 +39,15 @@
         <meta name="twitter:image:alt" content="Title">
         <meta property="fb:app_id" content="_app_id"/>
         <meta name="twitter:site" content="@app">
+
         <!-- Load Font -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
-            rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+
         <!-- Vendor JS -->
         <script src="../vendors/js/vendor.bundle.base.js" defer></script>
+
         <!-- Custom JS -->
         <script src="../js/main.js" defer></script>
         <script src="../js/carousels.js" defer></script>
@@ -52,10 +56,13 @@
         <script src="../js/forms.js" defer></script>
         <script src="../js/parallax.js" defer></script>
         <script src="../js/inputmasks.js" defer></script>
+
         <!-- Vendor CSS -->
         <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
+
         <!-- Custom CSS -->
         <link rel="stylesheet" href="../css/style.css">
+
         <!-- Load FONT AWESOME -->
         <link
             rel="stylesheet"
@@ -65,56 +72,55 @@
         <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <!-- partial -->
     </head>
     <body class="wow fadeIn">
         <!-- partial:../partials/__main-nav.html -->
         <nav class="main-nav" data-wow-delay="0.3s" id="main-nav">
-            <div class="container">
-                <div class="main-nav__content">
-                    <div class="main-nav__brand wow fadeIn" data-wow-delay="0.2s">
-                        <a href="../pages/index.html">
-                            <img src="../images/ico/brand.png" alt="Logo Paulo Freitas Ribeiro"/>
-                        </a>
-                    </div>
-                    <div class="main-nav__menu">
-                        <buttton
-                            class="main-nav__toggler wow fadeInRight"
-                            data-wow-delay="0.3s"
-                            data-toggle="nav-links">
-                            <img src="../images/ico/toggler.png" alt=""/>
+    <div class="container">
+        <div class="main-nav__content">
+            <div class="main-nav__brand wow fadeIn" data-wow-delay="0.2s">
+                <a href="../pages/index.html">
+                    <img src="../images/ico/brand.png" alt="Logo Paulo Freitas Ribeiro"/>
+                </a>
+            </div>
+
+            <div class="main-nav__menu">
+                <buttton class="main-nav__toggler wow fadeInRight" data-wow-delay="0.3s" data-toggle="nav-links">
+                    <img src="../images/ico/toggler.png" alt=""/>
+                </buttton>
+                <ul id="nav-links" class="main-nav__links">
+                    <button class="close" data-toggle="nav-links">
+                        <buttton class="toggler" data-active="false">        
+                            <img src="../images/ico/times.png" alt=""/>
                         </buttton>
-                        <ul id="nav-links" class="main-nav__links">
-                            <button class="close" data-toggle="nav-links">
-                                <buttton class="toggler" data-active="false">
-                                    <img src="../images/ico/times.png" alt=""/>
-                                </buttton>
-                            </button>
-                            <li class="active">
-                                <a href="../pages/index.html">Home</a>
-                            </li>
-                            <li>
-                                <a href="../pages/equipe.html">A equipe</a>
-                            </li>
-                            <li>
-                                <a href="../pages/escritorio.html">Escritório</a>
-                            </li>
-                            <li>
-                                <a href="../pages/areasdeatuacao.html">Áreas de atuação</a>
-                            </li>
-                            <li>
-                                <a href="../pages/imprensa.html">Imprensa</a>
-                            </li>
-                            <li>
-                                <a href="../pages/contato.html">Contato</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                    </button>
+                    <li class="active">
+                        <a href="../pages/index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="../pages/equipe.html">A equipe</a>
+                    </li>
+                    <li>
+                        <a href="../pages/escritorio.html">Escritório</a>
+                    </li>
+                    <li>
+                        <a href="../pages/areasatuacao.html">Áreas de atuação</a>
+                    </li>
+                    <li>
+                        <a href="../pages/imprensa.html">Imprensa</a>
+                    </li>
+                    <li>
+                        <a href="../pages/contato.html">Contato</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </nav>
-    <!-- partial -->
+    </div>
+</div>
+</nav>
+        <!-- partial -->
     <main>
         <section
             id="interna-header"
@@ -247,12 +253,11 @@
     </main>
     <!-- partial:../partials/__footer.html -->
     <footer class="main-footer wow fadeInUp" data-wow-delay="0.3s">
-        <div class="container">
-            <p>Paulo Freitas Ribeiro Advogados Associados
-                <br/>
-                @2020 Todos os direitos reservados</p>
-        </div>
-    </footer>
+   <div class="container">
+    <p>Paulo Freitas Ribeiro Advogados Associados <br/>
+        @2020 Todos os direitos reservados</p>
+   </div>
+</footer>
     <!-- partial -->
 </body>
 </html>
