Add internas areas atuacao

--- a/pages/area-direitopenalambiental.html
+++ b/pages/area-direitopenalambiental.html
@@ -131,53 +131,83 @@
         <section id="areasatuacao" class="areasatuacao">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="./area-direitopenal.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/pilares.jpg" alt="#">
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.3s">
+                                <a href="./area-direitopenalambiental.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/cidade-2.jpg" alt="#">
+                                    </div>
+                                </a>
                             </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Clássico
-                                </h3>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.4s">
+                                <a href="./area-direitopenal.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/pilares.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Direito Penal Clássico
+                                        </h3>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.5s">
+                                <a href="./area-direitopenaleconomico.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/escritorio-4.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Direito Penal Econômico Empresarial
+                                        </h3>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.6s">
+                                <a href="./area-legislacao.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/escritorio-4.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Legislação Anticorrupção e Compliance Criminal
+                                        </h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.4s">
-                        <a href="./area-direitopenalambiental.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/cidade-2.jpg" alt="#">
+                    <div class="col-lg-6 order-first order-lg-last">
+                        <div class="areasatuacao__content wow fadeIn" data-wow-delay="0.3s">
+                            <h2 class="title">Direito Penal Ambiental</h2>
+                            <hr>
+                            <div class="desc">
+                                <p>
+                                    A atuação do Escritório na área do Direito Penal Ambiental se dá tanto em
+                                    patrocínio do interesse de pessoas físicas quanto jurídicas. Especialmente após
+                                    a edição da Lei nº 9.605/98, conhecida como Lei de Crimes Ambientais, as
+                                    demandas envolvendo o meio ambiente ganharam notoriedade no âmbito da advocacia
+                                    criminal.</p>
+                                <p>
+                                    Nesse sentido, há peculiaridades nesta seara que demandam uma atuação
+                                    especializada do advogado, como, por exemplo, a possibilidade de
+                                    responsabilização penal da pessoa jurídica, admitida somente na hipótese de
+                                    prática de crimes ambientais.</p>
+                                <p>
+                                    Além disso, também vem se destacando a necessidade de uma atuação preventiva nas
+                                    empresas, com o intuito de implantar programas internos que efetivamente possam
+                                    coibir a eventual prática, ainda que culposa, de delitos no bojo da atividade
+                                    empresarial.</p>
+                                <p>
+                                    Dessa forma, a atuação do Escritório se dá sob duas vertentes: a primeira, em
+                                    âmbito contencioso, no patrocínio dos interesses de pessoas físicas ou jurídicas
+                                    em inquéritos policiais e/ou ações penais; a segunda, em âmbito consultivo,
+                                    apresentando opiniões jurídicas sobre questionamentos trazidos pela empresa e
+                                    implementando programas de compliance a fim de identificar potenciais riscos e
+                                    prevenir a ocorrência de ilícitos ambientais.</p>
                             </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Ambiental
-                                </h3>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.5s">
-                        <a href="./area-direitopenaleconomico.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-4.jpg" alt="#">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Econômico<br/> e Empresarial
-                                </h3>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.6s">
-                        <a href="./area-legislacao.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-4.jpg" alt="#">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Legislação Anticorrupção e Compliance Criminal
-                                </h3>
-                            </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
