--- a/pages/area-direitopenaleconomico.html
+++ b/pages/area-direitopenaleconomico.html
@@ -131,53 +131,84 @@
         <section id="areasatuacao" class="areasatuacao">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="./area-direitopenal.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/pilares.jpg" alt="#">
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.3s">
+                                <a href="./area-direitopenaleconomico.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/escritorio-4.jpg" alt="#">
+                                    </div>
+                                </a>
                             </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Clássico
-                                </h3>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.4s">
+                                <a href="./area-direitopenal.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/pilares.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Direito Penal Clássico
+                                        </h3>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.5s">
+                                <a href="./area-direitopenalambiental.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/cidade-2.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Direito Penal Ambiental
+                                        </h3>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.6s">
+                                <a href="./area-legislacao.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/escritorio-4.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Legislação Anticorrupção e Compliance Criminal
+                                        </h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.4s">
-                        <a href="./area-direitopenalambiental.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/cidade-2.jpg" alt="#">
+                    <div class="col-lg-6 order-first order-lg-last">
+                        <div class="areasatuacao__content wow fadeIn" data-wow-delay="0.3s">
+                            <h2 class="title">Direito Penal Econômico e Empresarial</h2>
+                            <hr>
+                            <div class="desc">
+                                <p>
+                                    O Direito Penal Econômico surge, no Brasil, a partir da década de 80, quando são
+                                    então criadas leis penais voltadas à proteção de bens jurídicos coletivos e
+                                    difusos. Com isso, o Direito Penal passa a se ocupar não apenas de lesões a
+                                    interesses individuais, mas também de danos causados à coletividade, como ocorre
+                                    no caso da prática de infrações em detrimento do meio ambiente, sistema
+                                    financeiro e livre concorrência.</p>
+                                <p>
+                                    Condutas criminosas passam a ser atribuídas a diretores e empregados de
+                                    corporações, que muitas vezes são acusados da prática de crimes em razão de
+                                    atividades desempenhadas no ambiente corporativo. Empresas, então, passam a
+                                    demandar assistência jurídica sob a ótica penal, seja para representar seus
+                                    gestores e funcionários em investigações e ações criminais, seja para solicitar
+                                    serviços advocatícios de caráter preventivo e estratégico através de serviços de
+                                    consultoria.</p>
+                                <p>Com a deflagração da Operação Lava Jato, tornou-se frequente o cumprimento de
+                                    medidas cautelares em desfavor de empresas e de seus colaboradores, com o
+                                    objetivo de promover o bloqueio de bens e valores, quebras de sigilo, buscas e
+                                    apreensões e prisões cautelares. Por esse motivo, a consultoria jurídica à
+                                    Empresa se tornou ainda mais necessária ao longo da última década.</p>
+                                <p>Nosso Escritório oferece serviços advocatícios a empresas dos mais diversos
+                                    setores no Brasil e no exterior, atuando através da realização de trabalhos de
+                                    consultoria e da representação legal de seus diretores e empregados em
+                                    procedimentos criminais.</p>
                             </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Ambiental
-                                </h3>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.5s">
-                        <a href="./area-direitopenaleconomico.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-4.jpg" alt="#">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Econômico<br/> e Empresarial
-                                </h3>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.6s">
-                        <a href="./area-legislacao.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-4.jpg" alt="#">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Legislação Anticorrupção e Compliance Criminal
-                                </h3>
-                            </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
