--- a/pages/area-legislacao.html
+++ b/pages/area-legislacao.html
@@ -131,53 +131,89 @@
         <section id="areasatuacao" class="areasatuacao">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="./area-direitopenal.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/pilares.jpg" alt="#">
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.3s">
+                                <a href="./area-legislacao.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/escritorio-4.jpg" alt="#">
+                                    </div>
+                                </a>
                             </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Clássico
-                                </h3>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.4s">
+                                <a href="./area-direitopenal.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/pilares.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Direito Penal Clássico
+                                        </h3>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.5s">
+                                <a href="./area-direitopenalambiental.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/cidade-2.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Direito Penal Ambiental
+                                        </h3>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.3s">
+                                <a href="./area-direitopenaleconomico.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/escritorio-4.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Direito Penal Econômico Empresarial
+                                        </h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.4s">
-                        <a href="./area-direitopenalambiental.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/cidade-2.jpg" alt="#">
+                    <div class="col-lg-6 order-first order-lg-last">
+                        <div class="areasatuacao__content wow fadeIn" data-wow-delay="0.3s">
+                            <h2 class="title">Legislação Anticorrupção e Compliance Criminal</h2>
+                            <hr>
+                            <div class="desc">
+                                <p>As Leis de Organização Criminosa (Lei 12.850/2013) e Anticorrupção (Lei
+                                    12.846/2013) introduziram no ordenamento jurídico brasileiro os institutos da
+                                    colaboração premiada e do acordo de leniência, modificando a dinâmica processual
+                                    penal até então vigente no país.</p>
+                                <p>
+                                    A intensificação na adoção de instrumentos de colaboração conferiu maior
+                                    celeridade ao trâmite de investigações criminais, uma vez que que viabilizou a
+                                    detecção e a apuração de infrações de forma mais célere do que era até então
+                                    possível através dos métodos investigativos tradicionais. Se por um lado uma
+                                    surge uma nova estratégia de defesa para os indivíduos e empresas, por outro se
+                                    torna comum a condução de operações policiais na sede de empresas e no domicílio
+                                    de seus diretores e empregados, criando riscos de curto prazo cujos danos são de
+                                    difícil reparação.</p>
+                                <p>
+                                    Assim, as inovações trazidas pela legislação anticorrupção, em 2013, alteram
+                                    significativamente a atuação do advogado criminalista, que passa a ter de tecer
+                                    estratégias preventivas e de redução de riscos.</p>
+                                <p>
+                                    É igualmente a partir da Lei Anticorrupção que o programa de compliance adquire
+                                    relevância legal no Brasil. A partir da Operação Lava Jato, verifica-se um
+                                    movimento pela implementação ou aperfeiçoamento das estruturas de compliance de
+                                    empresas localizadas no Brasil, envolvendo trabalhos de elaboração de estrutura
+                                    de controles internos, gestão de riscos e criação de políticas e procedimentos
+                                    corporativos.</p>
+                                <p>
+                                    Nosso Escritório conta experiência no assessoramento jurídico de empresas e
+                                    pessoas físicas em matérias relacionadas à legislação anticorrupção brasileira e
+                                    compliance criminal, tendo atuado em diversos casos de repercussão a nível
+                                    nacional.</p>
                             </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Ambiental
-                                </h3>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.5s">
-                        <a href="./area-direitopenaleconomico.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-4.jpg" alt="#">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Econômico<br/> e Empresarial
-                                </h3>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.6s">
-                        <a href="./area-legislacao.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-4.jpg" alt="#">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Legislação Anticorrupção e Compliance Criminal
-                                </h3>
-                            </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
