--- a/pages/area-direitopenal.html
+++ b/pages/area-direitopenal.html
@@ -131,53 +131,75 @@
         <section id="areasatuacao" class="areasatuacao">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="./area-direitopenal.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/pilares.jpg" alt="#">
+                    <div class="col-lg-6">
+                        <div class="row">
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.3s">
+                                <a href="./area-direitopenal.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/pilares.jpg" alt="#">
+                                    </div>
+                                </a>
                             </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Clássico
-                                </h3>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.4s">
+                                <a href="./area-direitopenalambiental.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/cidade-2.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Direito Penal Ambiental
+                                        </h3>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.5s">
+                                <a href="./area-direitopenaleconomico.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/escritorio-4.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Direito Penal Econômico<br/>
+                                            e Empresarial
+                                        </h3>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-12 wow fadeIn" data-wow-delay="0.6s">
+                                <a href="./area-legislacao.html" class="areasatuacao__item">
+                                    <div class="img">
+                                        <img src="../images/bg/escritorio-4.jpg" alt="#">
+                                    </div>
+                                    <div class="caption">
+                                        <h3 class="title md">
+                                            Legislação Anticorrupção e Compliance Criminal
+                                        </h3>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.4s">
-                        <a href="./area-direitopenalambiental.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/cidade-2.jpg" alt="#">
+                    <div class="col-lg-6 order-first order-lg-last">
+                        <div class="areasatuacao__content wow fadeIn" data-wow-delay="0.3s">
+                            <h2 class="title">Direito Penal Clássico</h2>
+                            <hr>
+                            <div class="desc">
+                                <p>O Direito Penal Clássico surge a partir da necessidade de se impor uma
+                                    limitação ao poder do Estado sobre os indivíduos e de viabilizar o convívio
+                                    entre particulares. Com esse objetivo, bens jurídicos individuais são
+                                    resguardados a partir da lei penal, tendo em vista a necessidade de se
+                                    estabelecer um arcabouço de garantias pessoais e evitar o cometimento de
+                                    excessos pelas autoridades de persecução penal.
+                                </p>
+                                <p>Assim, através do Código Penal e de leis esparsas, o Direito Penal Clássico
+                                    se ocupa da proteção a bens jurídicos individuais, como a vida, a liberdade, a
+                                    integridade física, o patrimônio e a honra.</p>
+                                <p>A atuação do nosso Escritório nessa seara é voltada à representação de
+                                    pessoas físicas, sejam elas vítimas ou acusadas da prática de infrações penais.
+                                    Para tanto, contamos com estrutura personalizada de atendimento aos nossos
+                                    clientes em assuntos criminais.</p>
                             </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Ambiental
-                                </h3>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.5s">
-                        <a href="./area-direitopenaleconomico.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-4.jpg" alt="#">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Direito Penal Econômico<br/> e Empresarial
-                                </h3>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-6 px-lg-0 wow fadeIn" data-wow-delay="0.6s">
-                        <a href="./area-legislacao.html" class="areasatuacao__item">
-                            <div class="img">
-                                <img src="../images/bg/escritorio-4.jpg" alt="#">
-                            </div>
-                            <div class="caption">
-                                <h3 class="title">
-                                    Legislação Anticorrupção e Compliance Criminal
-                                </h3>
-                            </div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
