--- a/pages/equipe.html
+++ b/pages/equipe.html
@@ -138,7 +138,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-4 px-md-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="#" class="equipe-list__item">
+                        <a href="./integrante.html" class="equipe-list__item">
                             <img src="../images/thumb/pessoa-4.jpg" alt="">
                             <div class="nome">
                                 <!-- Não remover o span -->
@@ -149,7 +149,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 px-md-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="#" class="equipe-list__item">
+                        <a href="./integrante.html" class="equipe-list__item">
                             <img src="../images/thumb/pessoa-3.jpg" alt="">
                             <div class="nome">
                                 <!-- Não remover o span -->
@@ -160,7 +160,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 px-md-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="#" class="equipe-list__item">
+                        <a href="./integrante.html" class="equipe-list__item">
                             <img src="../images/thumb/pessoa-2.jpg" alt="">
                             <div class="nome">
                                 <!-- Não remover o span -->
@@ -171,7 +171,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 px-md-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="#" class="equipe-list__item">
+                        <a href="./integrante.html" class="equipe-list__item">
                             <img src="../images/thumb/pessoa-1.jpg" alt="">
                             <div class="nome">
                                 <!-- Não remover o span -->
@@ -182,7 +182,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 px-md-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="#" class="equipe-list__item">
+                        <a href="./integrante.html" class="equipe-list__item">
                             <img src="../images/thumb/pessoa-2.jpg" alt="">
                             <div class="nome">
                                 <!-- Não remover o span -->
@@ -193,7 +193,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 px-md-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="#" class="equipe-list__item">
+                        <a href="./integrante.html" class="equipe-list__item">
                             <img src="../images/thumb/pessoa-1.jpg" alt="">
                             <div class="nome">
                                 <!-- Não remover o span -->
@@ -204,7 +204,7 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 px-md-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="#" class="equipe-list__item">
+                        <a href="./integrante.html" class="equipe-list__item">
                             <img src="../images/thumb/pessoa-1.jpg" alt="">
                             <div class="nome">
                                 <!-- Não remover o span -->
@@ -216,7 +216,7 @@
                     </div>
 
                     <div class="col-md-6 col-lg-4 px-md-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="#" class="equipe-list__item">
+                        <a href="./integrante.html" class="equipe-list__item">
                             <img src="../images/thumb/pessoa-1.jpg" alt="">
                             <div class="nome">
                                 <!-- Não remover o span -->
@@ -229,7 +229,7 @@
                     </div>
 
                     <div class="col-md-6 col-lg-4 px-md-0 wow fadeIn" data-wow-delay="0.3s">
-                        <a href="#" class="equipe-list__item">
+                        <a href="./integrante.html" class="equipe-list__item">
                             <img src="../images/thumb/pessoa-1.jpg" alt="">
                             <div class="nome">
                                 <!-- Não remover o span -->
